@@ -95,14 +95,20 @@
       
     <h3>Latest release</h3>
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.5.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.13.5 (Linux tarball)</a></div> 
+
+      <!--<p>There is currently no separate development release.</p>-->
+      
+    <h3>Past releases</h3>
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.4.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.13.4 (Linux tarball)</a></div> 
 
-      <!--<p>There is currently no separate development release.</p>-->
-      
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.3.tar.gz"
       title="Source code of the latest unstable release">
@@ -119,31 +125,7 @@
       <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.1.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.13.1 (Linux tarball)</a></div> 
-
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.3.tar.gz"
-      title="Source code of the latest unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.11.3 (Linux tarball)</a></div> 
-
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.2.tar.gz"
-      title="Source code of the latest unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.11.2 (Linux tarball)</a></div> 
-
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.1.tar.gz"
-      title="Source code of the latest unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.11.1 (Linux tarball)</a></div> 
-
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.0.tar.gz"
-      title="Source code of the latest unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.11.0 (Linux tarball)</a></div>
+      Tomboy 0.13.1 (Linux tarball)</a></div>
 
     <h2>Preview builds for Windows and Mac</h2>
       <p>These are binaries of the development version of Tomboy, provided as
@@ -159,15 +141,22 @@
       
     <h3>Latest release</h3>
       <div class="download">
+      Tomboy 0.13.5 |
+      <a href="http://download.gnome.org/binaries/win32/tomboy/0.13/Tomboy-0.13.5.msi"
+      title="Preview Windows build of the latest unstable release">(Windows installer)</a> | 
+      <a href="http://download.gnome.org/binaries/mac/tomboy/0.13/Tomboy-0.13.5.dmg"
+      title="Preview Mac build of the latest unstable release">(Mac OS X DMG)</a></div> 
+
+      <!--<p>There is currently no separate development release.</p>-->
+      
+    <h3>Past releases</h3>
+      <div class="download">
       Tomboy 0.13.4 |
       <a href="http://download.gnome.org/binaries/win32/tomboy/0.13/Tomboy-0.13.4.msi"
       title="Preview Windows build of the latest unstable release">(Windows installer)</a> | 
       <a href="http://download.gnome.org/binaries/mac/tomboy/0.13/Tomboy-0.13.4.dmg"
       title="Preview Mac build of the latest unstable release">(Mac OS X DMG)</a></div> 
 
-      <!--<p>There is currently no separate development release.</p>-->
-      
-    <h3>Past releases</h3>
       <div class="download">
       Tomboy 0.13.3 |
       <a href="http://download.gnome.org/binaries/win32/tomboy/0.13/Tomboy-0.13.3.msi"
