@@ -71,6 +71,18 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>February 16, 2009</h3>
+   	      <b>Unstable</b> version 0.13.5 released!  New features since
+   	      version 0.13.4 include:
+   	      <ul>
+   	        <li>Many updates and improvements to note printing.</li>
+   	        <li>Windows installer now requires Novell's GTK# 2.12.8 installer.</li>
+		<li>Less disk activity to improve power efficiency.</li>
+		<li>Some fixes to note linking behavior.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_13_5/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>February 2, 2009</h3>
    	      <b>Unstable</b> version 0.13.4 released!  New features since
    	      version 0.13.3 include:
