@@ -1,5 +1,10 @@
 2008-02-02  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
+	* index.html: Updated for 0.13.5 release.
+	* download.html: Ditto, and clear out 0.11.x releases.
+
+2008-02-02  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
 	* index.html: Updated for 0.13.4 release.
 	* download.html: Ditto.
 
